refactor (header): implement general title to header template

--- a/src/templates/partials/header/menu.pug
+++ b/src/templates/partials/header/menu.pug
@@ -1,10 +1,9 @@
 #Menu
   .left
-    a(href="/") falcaoaugustos
+    a(href="/") #{about.title}
 
   .right
     a(href='/#about') About
     a(href="/#technologies") Technologies
     a(href='/#projects') Projects
-    a(href="/") Resume
     a(href='mailto:falcaoaugustos@gmail.com') Contact
