refactor (contact): implement contact to general email

--- a/src/templates/partials/header/menu.pug
+++ b/src/templates/partials/header/menu.pug
@@ -6,4 +6,4 @@
     a(href='/#about') About
     a(href="/#technologies") Technologies
     a(href='/#projects') Projects
-    a(href='mailto:falcaoaugustos@gmail.com') Contact
+    a(href=`mailto:${about.email}`) Contact
