--- a/src/templates/partials/technologies.pug
+++ b/src/templates/partials/technologies.pug
@@ -1,1 +1,9 @@
 section#technologies.Content
+  .Container
+    .Title.center.margin
+      span.text Techonologies I work with
+    .Technologies
+      each technology in technologies
+        .topic
+          img(src=`images/${technology.title.toLowerCase()}.png`, alt=`${technology.title} logo`)
+          p #{technology.description}
