refactor (image style): Set max width to assets of techonologies and projects

--- a/src/styles/layouts/technologies.styl
+++ b/src/styles/layouts/technologies.styl
@@ -8,6 +8,10 @@
     .title
       text-transform: uppercase
       font-weight: 700
+    img
+      max-width: 150px
+      display: block
+      margin: 0 auto
 
 @media screen and (max-width: 850px)
   .Technologies .topic
