feat (welcome): Insert background-image to wecolme section

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,7 @@
 @import 'base/page'
 
 @import 'layouts/menu'
+@import 'layouts/welcome'
 @import 'layouts/technologies'
 @import 'layouts/projects'
 
