--- a/src/styles/components/content.styl
+++ b/src/styles/components/content.styl
@@ -1,3 +1,29 @@
+.Content
+  padding: 100px 25px
+  &.center
+    display: flex
+    justify-content: center
+    align-items: center
+  &.full
+    width: 100%
+    min-height: 100vh
+  &.medium
+    min-height: 650px
+  &.small
+    min-height: 500px
+  &.border
+    border-top: 1px solid
+  &.hero
+    height: 100%
+    display: flex
+    flex-direction: column
+    #Logo
+      margin-bottom: 10vh
+  &.bg-image
+    background-position: 50% 50%
+    background-repeat: no-repeat
+    background-size: cover
+
 @media screen and (max-width: 850px)
   .Content
     padding: 50px 25px
