refactor (font): update p tag position to about and welcome

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -2,6 +2,7 @@
 
 @import 'layouts/menu'
 @import 'layouts/welcome'
+@import 'layouts/about'
 @import 'layouts/technologies'
 @import 'layouts/projects'
 
