refactor (about): implement social icons with font awesome

--- a/src/styles/layouts/about.styl
+++ b/src/styles/layouts/about.styl
@@ -1,2 +1,15 @@
 #about p
   max-width: 600px
+
+#about i
+  font-size: 42px
+
+#about a
+  margin: 0px 15px
+
+@media screen and (max-width: 800px)
+  #about i
+    font-size: 32px
+
+  #about a
+    margin: 0px 10px
