feat (social): implement linkedin link in about section

--- a/src/templates/partials/about.pug
+++ b/src/templates/partials/about.pug
@@ -11,4 +11,6 @@ section#about.Content
         i.fa.fa-facebook
       a.icon(href=`https://instagram.com/${about.socialNetworks.instagram}`, title='Instagram' target='_blank')
         i.fa.fa-instagram
+      a.icon(href=`https://linkedin.com/in/${about.socialNetworks.linkedin}`, title='Linkedin' target='_blank')
+        i.fa.fa-linkedin
     p #{about.description}
