--- a/src/styles/base/page.styl
+++ b/src/styles/base/page.styl
@@ -2,7 +2,7 @@
   box-sizing: border-box
 
 body, html
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
+  font-family: TheSans, Helvetica Neue, sans-serif
   -webkit-font-smoothing: antialiased
   line-height: 1
   margin: 0
