--- a/src/styles/layouts/menu.styl
+++ b/src/styles/layouts/menu.styl
@@ -3,24 +3,43 @@
   top: 0
   left: 0
   width: 100%
-  background: #fff;
   z-index: 2
-
-body.over-dark #Menu
-  background: transparent
-  box-shadow: none
-#Menu
   .left
     left: 0
     position: absolute
     top: 0
     padding: 15px
+    z-index: 3
+    font-family: Cursive, Souvenir, serif
+    font-size: 1.2rem
+    a
+      position: relative
+      text-decoration: none
+      font-weight: 500
+      user-select: none
+      opacity: .45
+      &:before
+        content: ""
+        position: absolute
+        width: 100%
+        height: 1px
+        bottom: -5px
+        left: 0;
+        visibility: hidden
+        transform: scaleX(0)
+        transition: all 0.25s
+      &:hover
+        &:before
+          visibility: visible
+          transform: scaleX(1)
+        opacity: 1
   .right
     position: absolute
     top: 0
     padding: 15px
     right: 0
     width: 100%
+    background-color: #fff
     text-align: right
     a
       position: relative
