refactor (style): update welcome and technologies styles to a dark gray approach

--- a/src/styles/layouts/technologies.styl
+++ b/src/styles/layouts/technologies.styl
@@ -1,3 +1,12 @@
+#technologies.Content
+  background-color: #222
+
+#technologies span
+  color: #fff
+
+#technologies p
+  color: #fff
+
 .Technologies
   display: flex
   flex-wrap: wrap
