--- a/src/styles/layouts/welcome.styl
+++ b/src/styles/layouts/welcome.styl
@@ -1,6 +1,9 @@
 #welcome.Content
-  background-image: url("/images/welcome.jpg")
-  background-size: cover
+  background-color: #222
+
+#welcome span
+  color: #fff
 
 #welcome p
+  color: #fff
   max-width: 600px
