--- a/src/styles/base/page.styl
+++ b/src/styles/base/page.styl
@@ -2,9 +2,10 @@
   box-sizing: border-box
 
 body, html
-  font-family: TheSans, Helvetica Neue, sans-serif
+  font-family: 'Roboto Condensed', TheSans, Helvetica Neue, sans-serif
   -webkit-font-smoothing: antialiased
   line-height: 1
+  font-size: 18px
   margin: 0
   padding: 0
 
@@ -43,4 +44,4 @@ ul
 
 @media screen and (max-width: 800px)
   body, html
-    font-size: 12px
+    font-size: 16px
