refactor (partials): implement welcome, projects and techonologies sections with dark theme and items collection

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,14 +1,15 @@
 @import 'base/page'
+@import 'base/theme'
 
 @import 'layouts/menu'
 @import 'layouts/welcome'
 @import 'layouts/about'
-@import 'layouts/technologies'
-@import 'layouts/projects'
 
 @import 'components/container'
 @import 'components/content'
 @import 'components/icon'
 @import 'components/image'
+@import 'components/itemscollection'
 @import 'components/social'
 @import 'components/title'
+@import 'components/topic'
