--- a/src/templates/partials/projects.pug
+++ b/src/templates/partials/projects.pug
@@ -2,7 +2,7 @@ section#projects.Content
   .Container
     .Title.center.margin
       span.text Projects
-    .Projects
+    .ItemsCollection
       each project in projects
         .topic
           a(href=`${project.link}`, title=`${project.title}` target='_blank')
