--- a/src/templates/partials/technologies.pug
+++ b/src/templates/partials/technologies.pug
@@ -1,8 +1,8 @@
-section#technologies.Content
+section#technologies.Content.Dark
   .Container
     .Title.center.margin
       span.text Techonologies I work with
-    .Technologies
+    .ItemsCollection
       each technology in technologies
         .topic
           img(src=`images/${technology.title.toLowerCase()}.png`, alt=`${technology.title} logo`)
