refactor (scripts): remove main javascript file from project tree

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -3,12 +3,10 @@ html(lang='en')
 
   include layouts/head/_
 
-  body.over-dark
+  body
 
     include partials/header/_
  
     include partials/about
     include partials/technologies
     include partials/projects
-
-    include layouts/scripts
