fix (technologies): fix technologies template typo

--- a/src/templates/partials/technologies.pug
+++ b/src/templates/partials/technologies.pug
@@ -1,7 +1,7 @@
 section#technologies.Content.Dark
   .Container
     .Title.center.margin
-      span.text Techonologies I work with
+      span.text Technologies I work with
     .ItemsCollection
       each technology in technologies
         .topic
